objects/afl__afl_Knowledge_feedback__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Knowledge Feedback Tracking</description>
    <fields>
        <fullName>afl__Chatter_triggers_enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked by default. Disabling it avoids the creation of Article Feedback records using the designated hashtags on Chatter posts</description>
        <inlineHelpText>Checked by default. Disabling it avoids the creation of Article Feedback records using the designated hashtags on Chatter posts. Only disable it if you need to run processes that involve the FeedItem and FeedComment objects.</inlineHelpText>
        <label>Chatter triggers enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Hashtag__c</fullName>
        <defaultValue>&quot;#ArticleFeedback&quot;</defaultValue>
        <description>Hashtag is used to create an Article Feedback object when it is present in a Chatter feed for an Article.</description>
        <inlineHelpText>Type prefixed with the hash character (#).</inlineHelpText>
        <label>Hashtag</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__defaultPicklistValuesInserted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>defaultPicklistValuesInserted</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge feedback</label>
</CustomObject>